tests/positive/basic/replace_no_match/input.ci
void main() {
    print(replace("alpha", "z", "X") + "\n");
}
