tests/negative/runtime/copy_source_is_directory/input.ci
void main() {
    copy(".", "dst.txt");
}
